Fixed social footer only appearing on small screens

--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -7,13 +7,18 @@
 }
 
 .content {
-    padding-bottom: 100px;
-    margin:0 auto;
+    position: relative;
+    padding-bottom: 60px;
+    margin: 0 auto;
 }
 
 @media only screen and (min-width: 901px) {
     .content {
         max-width: 600px;
+    }
+
+    .social-button-footer {
+        display: none;
     }
 }
 
@@ -49,6 +54,10 @@
     .content {
         padding: 0 20px;
     }
+
+    .social-button-footer {
+        display: contents;
+    }
 }
 
 .side-container-left {
@@ -61,9 +70,4 @@
     @extend .side-container;
     bottom: 0px;
     right: 0px;
-}
-
-.side-container-content {
-    position: relative;
-    margin: auto;
 }
