--- a/src/components/social-button.module.scss
+++ b/src/components/social-button.module.scss
@@ -6,7 +6,6 @@
     transform: translateY(0px);
     position: relative;
     transition: all 0.2s;
-    overflow: auto;
 
     path {
         fill: $theme-element-unselected-color;
